--- a/index.html
+++ b/index.html
@@ -3,13 +3,43 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>UPDATE THIS TITLE</title>
+  <title>Home of Smart Door</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <!-- Replace this line with a link to your Google fonts. DO NOT repeat the “preconnect” entries on lines 6 and 7 above. -->
-  <!-- Do not edit the following line of syntax. -->
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
+  <header>
+    <section class="title">
+      <div class="title__header">
+        <h1>The Smart Door.</h1>
+      </div>
+    </section>
+    <nav class="navbar">
+      <div class="navbar__links">
+        <a class="navbar__link" href="about.html">About Designer</a>
+        <a class="navbar__link" href="contact.html">Contact Designer</a>
+        <a class="navbar__link" href="progress.html">Development Progress</a>
+      </div>
+    </nav>
+  </header>
+  <main class="content">
+    <div class="content__text">
+      <h3>🚪🔍 Introducing The Smart Door: Your Classroom's Intelligent Access Solution! 🎓</h3>
+
+      <p> into the future of classroom security with The Smart Door, the innovative system that leverages the power of facial recognition to revolutionize the way you unlock doors. Say goodbye to the hassle of traditional keys and hello to a new era of convenience and safety! 😊</p>
+
+      <p>With The Smart Door, accessing your classroom has never been easier or more secure. Our state-of-the-art facial recognition technology ensures that only authorized individuals can enter, providing peace of mind for students, faculty, and administrators alike. 🔒</p>
+
+      <p> Smart Door's lightning-fast recognition capabilities mean no more waiting in line or fumbling with keys. Just approach the door, and our intelligent system will grant you swift access, allowing you to focus on what matters most: learning and teaching. ⏰📚</p>
+
+      <p>Designed with elegance and durability in mind, The Smart Door seamlessly integrates with any classroom aesthetic while withstanding the rigors of daily use. Its sleek, modern appearance enhances the look of your educational space while providing unmatched functionality. 🎨💪</p>
+
+      <p>Experience the perfect blend of security, convenience, and cutting-edge technology with The Smart Door. Upgrade your classroom access control today and unlock the potential of facial recognition for your educational institution! 🌟🔓</p>
+    </div>
+    <div class="content__image">
+      <img src="img/render.png" alt="Smart Door">
+    </div>
 </body>
 </html>
